Fallback for generation